// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar should render correctly in english 1`] = `
<DocumentFragment>
  <div
    class="ft-actionBar"
  >
    <button
      class="btn af-btn"
      id="startTagging"
      name="Start tagging"
    >
      <span
        class="af-btn-text"
      >
        Start tagging
      </span>
    </button>
    <a
      class="ft-actionBar__link"
      href=""
    >
      Export
    </a>
  </div>
</DocumentFragment>
`;

exports[`ActionBar should render correctly in french 1`] = `
<DocumentFragment>
  <div
    class="ft-actionBar"
  >
    <button
      class="btn af-btn"
      id="startTagging"
      name="Commencer à annoter"
    >
      <span
        class="af-btn-text"
      >
        Commencer à annoter
      </span>
    </button>
    <a
      class="ft-actionBar__link"
      href=""
    >
      Exporter
    </a>
  </div>
</DocumentFragment>
`;
